# book-craw

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  stats.html
.github/workflows/: weekly-books.yml
books/: 2026-02-15.html  2026-02-16.html  2026-02-23.html  2026-03-02.html  2026-03-09.html  2026-03-18.html  2026-03-23.html  2026-03-30.html  2026-04-06.html  2026-04-13.html  2026-04-20.html  2026-04-27.html  2026-05-04.html  2026-05-11.html  2026-05-18.html  2026-05-24.html  2026-05-25.html  2026-05-27.html  2026-06-01.html
src/book_craw/: __init__.py  __main__.py  config.py  emailer.py  main.py  pages.py  scraper.py
