[project]
name = "book-craw"
version = "0.1.0"
description = "博客來新書/預購書爬蟲，每週自動寄送書單 Email"
readme = "README.md"
authors = [
    { name = "Dylan Chen", email = "u8961310@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
